--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-server.port = 1234
+server.port = 1818
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.0.65/oms
+spring.datasource.url=jdbc:mysql://ec2-18-144-49-175.us-west-1.compute.amazonaws.com/oms
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=1111
